# PEPL-STDLIB

./: Cargo.toml  README.md  ROADMAP.md
src/: capability.rs  error.rs  lib.rs  module.rs  value.rs
src/modules/: convert.rs  core.rs  http.rs  json.rs  list.rs  location.rs  math.rs  mod.rs  notifications.rs  record.rs  storage.rs  string.rs  time.rs  timer.rs
tests/: capability_tests.rs  core_tests.rs  list_tests.rs  math_tests.rs  phase5_tests.rs  string_tests.rs
