[package]
name = "pepl-stdlib"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/pepl-lang/pepl-stdlib"
description = "Standard library for the PEPL language"
authors = ["PEPL Team"]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
